src/main.scss
* { 
    box-sizing: border-box;
}

html {
    min-height: 100vh;
  }

body {
    position: relative;
}

.background {
    background-image: url("../public/media/images/metal_rolling_background.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: 100%;
    height: 100%;
    left: 0;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: -1000;    
}

.app {
    padding-top: 3%;
    padding-left: 3%;
    padding-right: 3%;
}

.title {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 50px;
}

.products {
    margin-bottom: 50px;
}

.product-icon {
    display: flex;
    height: inherit;
    width: inherit;
}

.products__button {
    color: white;
}

.main-page__header1 {
    text-align: center;
}

.main_page__phone-numbers {
    text-align: center;
}

.main-page__emails {
    text-align: center;
}

.main-page__header2 {
    text-align: center;
}

.phone-numbers {
    text-align: center;
}

.phone-numbers__phone-number {
    text-align: center;
    display: block;
}

